[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Pictures/MapsThumbnails/TestMap.PNG" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Tres/UniqeenBold_NumberFont_50.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/MenuControllers/MapSelectorElementController.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pictures/Others/SelectedElement.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Element" type="Control"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 550, 150 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
labelTexturePath = NodePath("LabelTexture")
mapThumbnailPath = NodePath("MapThumbnail")
selectedtexturePath = NodePath("SelectedTexture")

[node name="LabelTexture" type="TextureRect" parent="."]
margin_right = 348.0
margin_bottom = 150.0
rect_min_size = Vector2( 348, 150 )
theme = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapThumbnail" type="TextureRect" parent="."]
margin_left = 350.0
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedTexture" type="TextureRect" parent="."]
visible = false
margin_right = 551.0
margin_bottom = 152.0
texture = ExtResource( 4 )
expand = true

[node name="EventButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 551.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="EventButton" to="." method="_on_Element_mouse_entered"]
[connection signal="mouse_exited" from="EventButton" to="." method="_on_Element_mouse_exited"]
[connection signal="pressed" from="EventButton" to="." method="_on_Element_pressed"]
